@@ -1,3 +1,10 @@
+2024-05-18  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
+
+	* ptex-base.ch: Enable to get character codes
+	from control symbols by using backquote "`".
+	* tests/ctlsym_num.tex: Add a test file.
+	https://github.com/texjporg/tex-jp-build/issues/167
+
 2024-05-11  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* uptex-m.ch: Fix unmatched begin-end grouping
